--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dev_dependencies:
   amplify_auth_cognito: ^1.2.1
   provider: ^6.0.1
   timeago: ^3.1.0
+  aws_common: ^0.5.0+3
   cached_network_image: ^3.1.0
   shared_preferences: ^2.0.6
   image_picker: ^0.8.2
