--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dev_dependencies:
   shared_preferences: ^2.0.6
   image_picker: ^0.8.2
   amplify_storage_s3: ^1.2.1
+  flutter_staggered_grid_view: ^0.6.2
 
   flutter_svg: ^1.1.5
 
